Avoid line-breaks in teaser comment count

--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -124,6 +124,7 @@
 		margin: 0 $micro
 
 %teaser-commentcount
+	white-space: nowrap
 	&:link, &:visited
 		border-bottom: 1px solid $zon_lighter_grey
 		color: inherit
